<resources>
    <string name="kleax">KLEAX</string>
    <string name="compra_hoy_">Compra hoy, disfruta mañana</string>
    <string name="reg_strese">Regístrese</string>
    <string name="ya_tienes_u">¿Ya tienes una cuenta?</string>
    <string name="iniciar_ses">Iniciar sesión</string>
    <string name="restablecer_contrasena">Restablecer contraseña</string>
    <string name="registrarse">REGISTRARSE\n</string>
    <string name="registrarse2">Registrarse con Google</string>
    <string name="o_continua_">O continua con Email</string>
    <string name="ingresa_Nombre">Ingresa tu nombre</string>
    <string name="ingresa_Usuario">Ingresa tu nombre de usuario</string>
    <string name="ingresa_Email">Ingresa tu Email</string>
    <string name="ingresa_Contraseña">Ingresa tu contraseña</string>
    <string name="ingresa_ConfirmarContraseña">Confirma tu contraseña</string>
    <string name="acepto_Condiciones">Acepto las Condiciones del servicio y la Política de privacidad</string>
    <string name="crear_cuent">Crear cuenta</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="restablecer_con">RESTABLECER CONTRASEÑA</string>
    <string name="iniciar_Google">Iniciar sesión con Google</string>
    <string name="ingresa_con">Ingresa con huella digital</string>
    <string name="o">O</string>
    <string name="o_inicia_se">O inicia sesión con Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="no_tiene_cu">¿No tiene cuenta?</string>
    <string name="recordar_co">Recordar contraseña</string>
    <string name="la_olvidast">¿La olvidaste?</string>
    <string name="angelina_jo">Angelina Jolie</string>
    <string name="perfil">Perfil</string>
    <string name="salir">Salir</string>
    <string name="direcciones">Direcciones</string>
    <string name="m_todos_de_">Métodos de pago</string>
    <string name="mis_pedidos">Mis pedidos</string>
    <string name="cambiar_la_">Cambiar la contraseña</string>
    <string name="pol_ticas_d">Políticas de privacidad</string>
    <string name="nuestras_ti">Nuestras tiendas</string>
    <string name="editar_perf">Editar Perfil</string>
    <string name="nombre_comp">Nombre completo</string>
    <string name="celular">Celular</string>
    <string name="fecha_de_na">Fecha de nacimiento</string>
    <string name="guardar">Guardar</string>
    <string name="app_name">proyectokleax</string>
    <string name="verifique_s">Verifique su Email</string>
    <string name="verifique_m">Por favor, introduzca el código enviado a su dirección de Email para su confirmación.</string>
    <string name="verifique_a">morado@gmail.com</string>
    <string name="CARTA">TODO</string>
    <string name="edit">Edit\n</string>
    <string name="some_id">5</string>
    <string name="no_ha_recib">¿No ha recibido ningún código?</string>
    <string name="reenviar_ot">Reenviar OTP en 0:30s</string>
    <string name="image_desc">chulito</string>
    <string name="proceso_de_">Proceso de verificación satisfactorio</string>
    <string name="verifique_e">Su cuenta ha sido verificada con éxito. Disfrute de nuestros servicios a partir de ahora.</string>
    <string name="huella_digi">HUELLA DIGITAL</string>
    <string name="escanee_su_">Escanee su huella digital para ingresar</string>
    <string name="escaneando_">Escaneando...</string>
    <string name="verificando">Verificando dato biométrico</string>
    <string name="procesoinvalido">Proceso de autenticación inválido</string>
    <string name="verifique_g">Huella digital no reconocida. Por favor escanee de nuevo su huella digital.\n  </string>
    <string name="ClientesD">ClientesD</string>
    <string name="categor_as">Categorías</string>
    <string name="panader_a">Panadería</string>
    <string name="carnes">Carnes</string>
    <string name="bebidas">Bebidas</string>
    <string name="granos">Granos</string>
    <string name="ofertas">Ofertas</string>
    <string name="m_s_buscado">Más buscados</string>
    <string name="ver_m_s">Ver más</string>
    <string name="nestl_">Nestlé</string>
    <string name="bono">Bono</string>
    <string name="mid">Mid</string>
    <string name="crema_de_le">Crema de leche original\nuht 200g</string>
    <string name="bolacha_rel">Bolacha rellena de chocolate 126g</string>
    <string name="refresco_sa">Refresco sabor piña 20g</string>
    <string name="some1_id">$3.000</string>
    <string name="some2_id">$2.000</string>
    <string name="some3_id">$2.300</string>
    <string name="some4_id">$2.500</string>
    <string name="elma_chips">Elma chips</string>
    <string name="papas_frita">Papas fritas extra finas 205g</string>
    <string name="qu_buscas_">¿Qué buscas?</string>
    <string name="detalles_de">Detalles del producto</string>
    <string name="some5_id">$3.000</string>
    <string name="la_crema_de">La Crema de Leche NESTLÉ® es el aliado perfecto para chefs y profesionales de la cocina que buscan versatilidad y calidad en sus creaciones.</string>
    <string name="some6_id">2</string>
    <string name="comprar">Comprar</string>
    <string name="opciones">Opciones</string>
    <string name="frutas">Frutas</string>
    <string name="verduras">Verduras</string>
    <string name="legumbres">Legumbres</string>
    <string name="carnes_fr_a">Carnes frías</string>
    <string name="carrito">Carrito</string>
    <string name="ver_todo">Ver todo</string>
    <string name="kleax1">KLEAX</string>
    <string name="pago_por_ap"> Pago por app</string>
    <string name="kleax10">KLEAX </string>
    <string name="pagar_la_en">Pagar la entrega</string>
    <string name="pix">PIX</string>
    <string name="visa_cr_dit">visa - credito</string>
    <string name="elo_cr_dito">elo - credito</string>
    <string name="tarjeta_registrada">Tarjeta Registrada</string>
    <string name="elige_un_m_">Elige un método de pago</string>
    <string name="cr_dito">Credito</string>
    <string name="agregar_tarjeta">Agregar Tarjeta</string>
    <string name="kleax_rp">KLEAX</string>
    <string name="pago_recibido">Pago Recibido</string>
    <string name="kleax11">KLEAX</string>
    <string name="historial_d">Historial de compras</string>
    <string name="productos_c">Productos comprados</string>
    <string name="fashion_poi">Bolacha rellena de chocolate</string>
    <string name="some_id_fc">$2.000</string>
    <string name="some_id_fc2">50% Off</string>
    <string name="rahul">Entregado</string>
    <string name="fashion_poi1">Refresco sabor piña</string>
    <string name="some_id_fc3">$2.300</string>
    <string name="fashion_poi2">Crema de leche original</string>
    <string name="some_id_fc4">$3.000</string>
    <string name="kleax_sp">KLEAX</string>
    <string name="detalles_de2">Detalles y seguimiento de pedidos</string>
    <string name="some_id_sp">Gracias por el pedido</string>
    <string name="fashion_poi3">Crema de leche original</string>
    <string name="some_id_sp1">$3.000</string>
    <string name="delivery_ad">Direccion de Entrega</string>
    <string name="rahul_chauh">Vallegrande</string>
    <string name="confirmar_pago">Confirmar Pago</string>


</resources>