<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iniciar_sesion">

    <RelativeLayout
        android:id="@+id/fondo_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#F5F5DC"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button_registrarse3"
            android:layout_width="306dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="61dp"
            android:layout_marginTop="479dp"
            android:background="@drawable/button_registrarse"
            android:text="Iniciar sesión" />

        <View
            android:id="@+id/rectangle_"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="362dp"
            android:background="@drawable/cuadrado_check" />

        <EditText
            android:id="@+id/caja_1"
            android:layout_width="306dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="177dp"
            android:background="@drawable/caja"
            android:hint="@string/ingresa_Email"
            android:paddingStart="16dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/caja_2"
            android:layout_width="306dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="298dp"
            android:background="@drawable/caja"
            android:hint="@string/ingresa_Contraseña"
            android:paddingStart="16dp"
            android:inputType="textPassword" />



        <!-- Auto layout, variables, and unit scale are not yet supported -->

        <TextView
            android:id="@+id/registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="104dp"
            android:layout_marginTop="65dp"
            android:gravity="top"
            android:text="@string/iniciar_sesion"
            android:textAppearance="@style/registrarse" />

        <TextView
            android:id="@+id/email"
            android:layout_width="40dp"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="48dp"
            android:layout_marginTop="139dp"
            android:gravity="top"
            android:text="@string/email"
            android:textAppearance="@style/o_continua_" />

        <TextView
            android:id="@+id/contrase_a"
            android:layout_width="90dp"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="262dp"
            android:gravity="top"
            android:text="@string/contrase_a"
            android:textAppearance="@style/o_continua_" />

        <TextView
            android:id="@+id/no_tiene_cu"
            android:layout_width="133dp"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="151dp"
            android:layout_marginTop="538dp"
            android:gravity="top"
            android:text="@string/no_tiene_cu"
            android:textAppearance="@style/ya_tienes_u" />

        <TextView
            android:id="@+id/reg_strese"
            android:layout_width="86dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="179dp"
            android:layout_marginTop="571dp"
            android:gravity="top"
            android:text="@string/reg_strese"
            android:textAppearance="@style/o_continua_" />

        <TextView
            android:id="@+id/recordar_co"
            android:layout_width="146dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="77dp"
            android:layout_marginTop="358dp"
            android:gravity="top"
            android:text="@string/recordar_co"
            android:textAppearance="@style/recordar_contraseña" />

        <TextView
            android:id="@+id/la_olvidast"
            android:layout_width="100dp"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="251dp"
            android:layout_marginTop="357dp"
            android:gravity="top"
            android:text="@string/la_olvidast"
            android:textAppearance="@style/recordar_contraseña" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>