<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestablecerContraseña">

    <RelativeLayout
        android:id="@+id/fondo_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#F5F5DC"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <!-- Texto de retroalimentación -->

        <EditText
            android:id="@+id/caja_1"
            android:layout_width="306dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="46dp"
            android:layout_marginTop="199dp"
            android:autofillHints=""
            android:background="@drawable/caja"
            android:hint="@string/ingresa_Email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/button_restablecer"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="83dp"
            android:layout_marginTop="277dp"
            android:backgroundTint="#000000"
            android:text="@string/restablecer_contrasena"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/instrucciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:gravity="center"
            android:text="Te enviaremos un correo con instrucciones para restablecer tu contraseña."
            android:textColor="#757575"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/ya_tienes_cuenta"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="428dp"
            android:gravity="top"
            android:text="@string/ya_tienes_u"
            android:textAppearance="@style/ya_tienes_u" />


        <TextView
            android:id="@+id/iniciar_sesion"
            android:layout_width="98dp"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="161dp"
            android:layout_marginTop="462dp"
            android:gravity="top"
            android:text="@string/iniciar_ses"
            android:textAppearance="@style/iniciar_ses" />

        <TextView
            android:id="@+id/email"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="53dp"
            android:layout_marginTop="161dp"
            android:gravity="top"
            android:text="@string/email"
            android:textAppearance="@style/o_continua_" />

        <TextView
            android:id="@+id/restablecer_con"
            android:layout_width="248dp"
            android:layout_height="92dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="99dp"
            android:layout_marginTop="41dp"
            android:gravity="top"
            android:text="@string/restablecer_con"
            android:textAppearance="@style/registrarse" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>