<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verificacion_confirmada">

    <RelativeLayout
        android:id="@+id/verificaci_"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/verificaci_"
        tools:ignore="MissingConstraints">

        <View
            android:id="@+id/ellipse_132"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="164dp"
            android:layout_marginTop="360dp"
            android:background="@drawable/ellipse_132" />


        <RelativeLayout
            android:id="@+id/iconly_curv"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="185dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="380dp">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/tick_icon" />

        </RelativeLayout>

        <TextView
            android:id="@+id/proceso_de_"
            android:layout_width="310dp"
            android:layout_height="55dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="500dp"
            android:gravity="center"
            android:text="@string/proceso_de_"
            android:textAppearance="@style/proceso_de_"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/verifique_e"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="560dp"
            android:text="@string/verifique_e"
            android:textAppearance="@style/verifique_e"
            android:gravity="center"
            />
        <View
            android:id="@+id/back"
            android:layout_width="22dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="372dp"
            android:layout_marginTop="826dp"
            android:background="@drawable/back" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>